--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "babel-loader": "^7.1.1",
     "babel-preset-env": "^1.6.0",
     "http-server": "^0.10.0",
-    "webpack": "^3.5.5",
-    "enumify": "^1.0.4"
+    "webpack": "^3.5.5"
   },
   "dependencies": {}
 }
