--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,3 @@
 {
-    "presets": [
-        ["env", {
-          "targets": {
-            "browsers": ["last 2 versions"]
-          }
-        }]
-    ]
+    "presets": ["env"]
 }
