[WebGL2] read SSD_MobileNet model

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ examples/mobilenet/model/
 !examples/mobilenet/model/README.md
 examples/squeezenet/model/
 !examples/squeezenet/model/README.md
+examples/ssd_mobilenet/model/
+!examples/ssd_mobilenet/model/README.md
