--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "ndarray-squeeze": "^1.0.2",
     "selenium-webdriver": "^3.1.0",
     "webpack": "^3.5.5",
-    "tfjs-core-webgl2": "0.13.10"
+    "@tensorflow/tfjs-core": "0.13.12"
   },
   "dependencies": {}
 }
