--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "webpack": "^3.5.5",
     "npmlog": "^4.1.2",
     "globby": "^8.0.1",
-    "rimraf": "^2.6.2"
+    "rimraf": "^2.6.2",
+    "@tensorflow/tfjs-core": "0.13.12"
   },
   "dependencies": {}
 }
