--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,9 @@ matrix:
       node_js: '8'
       sudo: 'required'
 before_install:
-  - brew update > /dev/null
-  - brew cask install google-chrome
+  - wget https://dl.google.com/chrome/mac/stable/GGRO/googlechrome.dmg
+  - hdiutil attach googlechrome.dmg
+  - cp -R "/Volumes/Google Chrome/Google Chrome.app" /Applications
 install:
   - npm install
   - npm run build
