[WASM] update tensorflow to a released version r1.12

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,4 @@
 [submodule "src/nn/wasm/src/external/tensorflow"]
 	path = src/nn/wasm/src/external/tensorflow
 	url = https://github.com/tensorflow/tensorflow.git
+	branch = r1.12
