--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,10 @@ matrix:
     - os: osx
       node_js: '8'
       sudo: 'required'
+before_install:
+  - wget https://dl.google.com/chrome/mac/stable/GGRO/googlechrome.dmg
+  - hdiutil attach googlechrome.dmg
+  - cp -R "/Volumes/Google Chrome/Google Chrome.app" /Applications
 install:
   - npm install
   - npm run build
@@ -15,3 +19,4 @@ script:
   - git log -1 $TRAVIS_COMMIT --pretty="%cE"
   - git log -1
   - }
+  - npm test
