--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ matrix:
       node_js: '8'
       sudo: 'required'
 before_install:
+  - node .filter-ci.js $TRAVIS_COMMIT
   - wget https://dl.google.com/chrome/mac/stable/GGRO/googlechrome.dmg
   - hdiutil attach googlechrome.dmg
   - cp -R "/Volumes/Google Chrome/Google Chrome.app" /Applications
