--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ examples/**/*.tflite
 examples/**/*.onnx
 examples/**/*.bin
 examples/**/*.xml
+examples/skeleton_detection/model/mobilenet*/*
 src/nn/wasm/src/build
 .DS_Store
 package-lock.json
