--- a/package.json
+++ b/package.json
@@ -29,14 +29,14 @@
     "babel-loader": "^7.1.1",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
-    "chromedriver": "78.0.1",
+    "chromedriver": "79.0.0",
     "fast-csv": "^2.4.1",
     "http-server": "^0.10.0",
     "ndarray": "^1.0.18",
     "ndarray-ops": "^1.2.2",
     "ndarray-squeeze": "^1.0.2",
     "portfinder": "^1.0.20",
-    "selenium-webdriver": "^3.1.0",
+    "selenium-webdriver": "^4.0.0-alpha.5",
     "webpack": "^4.26.0",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10",
