--- a/package.json
+++ b/package.json
@@ -45,6 +45,9 @@
     "selenium-webdriver": "^4.0.0-alpha.5",
     "webpack": "^4.26.0",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10"
+    "webpack-dev-server": "^3.1.10",
+    "@webgpu/glslang": "0.0.12",
+    "@webgpu/types": "0.0.18",
+    "@tensorflow/tfjs-backend-webgpu": "0.0.1-alpha.0"
   }
 }
