[workload] Refactor workload code to align with refactored examples code.            fixes #1215

--- a/workload/resources/posenetConfig.json
+++ b/workload/resources/posenetConfig.json
@@ -1,6 +1,7 @@
 {
-    "modelVersion": 1.0,
+    "version": 1.0,
     "outputStride": 16,
     "scaleFactor": 0.5,
-    "minScore": 0.5
+    "minScore": 0.5,
+    "useAtrousConv": false
 }
