--- a/examples/webnnmeeting/package.json
+++ b/examples/webnnmeeting/package.json
@@ -23,39 +23,39 @@
     }
   },
   "dependencies": {
-    "@nuxtjs/axios": "^5.3.6",
+    "@nuxtjs/axios": "^5.11.0",
     "@nuxtjs/dotenv": "^1.4.0",
-    "@nuxtjs/pwa": "^3.0.0-0",
-    "concurrently": "^5.1.0",
+    "@nuxtjs/pwa": "^3.0.0-beta.20",
+    "concurrently": "^5.2.0",
     "cors": "^2.8.5",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
-    "nuxt": "^2.11.0",
-    "nuxt-buefy": "^0.3.22",
+    "nuxt": "^2.13.2",
+    "nuxt-buefy": "^0.3.31",
     "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^1.0.1",
-    "@nuxtjs/eslint-module": "^1.0.0",
-    "@nuxtjs/stylelint-module": "^3.1.0",
-    "@vue/test-utils": "^1.0.0-beta.27",
-    "ava": "^3.3.0",
-    "babel-eslint": "^10.0.1",
+    "@nuxtjs/eslint-module": "^1.2.0",
+    "@nuxtjs/stylelint-module": "^3.2.2",
+    "@vue/test-utils": "^1.0.3",
+    "ava": "^3.9.0",
+    "babel-eslint": "^10.1.0",
     "babel-plugin-module-resolver": "^3.2.0",
     "browser-env": "^3.2.5",
     "eslint": "^6.1.0",
     "eslint-config-prettier": "^4.1.0",
-    "eslint-plugin-nuxt": ">=0.4.2",
-    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-nuxt": "^0.5.2",
+    "eslint-plugin-prettier": "^3.1.4",
     "husky": "^2.6.0",
     "lint-staged": "^8.2.1",
-    "node-sass": "^4.13.1",
-    "nodemon": "^1.18.9",
+    "node-sass": "^4.14.1",
+    "nodemon": "^2.0.4",
     "prettier": "^1.16.4",
     "require-extension-hooks": "^0.3.3",
     "require-extension-hooks-babel": "^1.0.0",
     "require-extension-hooks-vue": "^2.0.0",
-    "sass-loader": "^8.0.0",
+    "sass-loader": "^8.0.2",
     "stylelint": "^10.1.0"
   }
 }
