--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
   },
   "homepage": "https://github.com/intel/webml-polyfill#readme",
   "devDependencies": {
-    "@tensorflow/tfjs-backend-wasm": "1.5.1-alpha5",
-    "@tensorflow/tfjs-core": "1.7.4",
+    "@tensorflow/tfjs-backend-wasm": "2.0.1",
+    "@tensorflow/tfjs-backend-webgl": "2.0.1",
+    "@tensorflow/tfjs-core": "2.0.1",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.1",
     "babel-polyfill": "^6.26.0",
