--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
   },
   "homepage": "https://github.com/intel/webml-polyfill#readme",
   "devDependencies": {
-    "@tensorflow/tfjs-backend-wasm": "2.0.1",
-    "@tensorflow/tfjs-backend-webgl": "2.0.1",
-    "@tensorflow/tfjs-core": "2.0.1",
+    "@tensorflow/tfjs-backend-wasm": "^2.4.0",
+    "@tensorflow/tfjs-backend-webgl": "2.4.0",
+    "@tensorflow/tfjs-backend-webgpu": "0.0.1-alpha.4",
+    "@tensorflow/tfjs-core": "^2.4.0",
+    "@webgpu/glslang": "0.0.12",
+    "@webgpu/types": "0.0.24",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.1",
     "babel-polyfill": "^6.26.0",
@@ -48,9 +51,6 @@
     "typescript": "^3.9.5",
     "webpack": "^4.26.0",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10",
-    "@webgpu/glslang": "0.0.12",
-    "@webgpu/types": "0.0.24",
-    "@tensorflow/tfjs-backend-webgpu": "0.0.1-alpha.4"
+    "webpack-dev-server": "^3.1.10"
   }
 }
