--- a/package.json
+++ b/package.json
@@ -51,6 +51,10 @@
     "typescript": "^3.9.5",
     "webpack": "^4.26.0",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10"
+    "webpack-dev-server": "^3.1.10",
+    "@webgpu/glslang": "0.0.12",
+    "@webgpu/types": "0.0.24",
+    "@tensorflow/tfjs-backend-webgpu": "0.0.1-alpha.4",
+    "inference-engine-node": "^0.1.4"
   }
 }
